[package]
name = "ryansend"
version = "1.1.1"
edition = "2021"
license = "MIT OR Apache-2.0"

[dependencies]
axum = "0.7"
tokio = { version = "1.0", features = ["macros", "rt-multi-thread", "fs", "net"] }
rusty_paseto = { version = "0.9", features = ["paserk"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_yaml = "0.9"
clap = { version = "4.4", features = ["derive"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
rand = "0.9"
log = "0.4"
env_logger = "0.10"
tokio-util = { version = "0.7", features = ["io"] }
